--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 ENV = 'development'
 
-VITE_BASE_URL = 'http://localhost:2500'
+VITE_BASE_URL = 'http://localhost:2500/api'
 VITE_APP_LOGIN = '/login'
